# MapSy-AI

./: .gitignore  CHANGELOG.json  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  pyproject.toml  version.yml
.github/workflows/: PROJECT-PYTHON-CI.yaml  PROJECT-PYTHON-CICD.yaml  PROJECT-PYTHON-SYNOLOGY-PR-PREVIEW.yaml
.github/workflows/project-types/flutter/: PROJECT-FLUTTER-ANDROID-PLAYSTORE-CICD.yaml  PROJECT-FLUTTER-ANDROID-SYNOLOGY-CICD.yaml
src/: main.py
src/apis/: geocoding_router.py  place_router.py  test_router.py
src/core/: config.py  logging.py
src/models/: __init__.py  callback_request.py  content_info.py  geocoding_models.py  google_place_info.py  naver_place_info.py  place_extraction_dict.py  place_extraction_response.py
src/services/: background_tasks.py  geocoding_service.py  integrated_workflow.py  workflow.py
src/services/modules/: ollama_llm.py
src/services/scraper/: __init__.py  common_util.py  playwright_browser.py  scrape_router.py
src/utils/: common.py  url_classifier.py
